--- a/disease-categorization.ipynb
+++ b/disease-categorization.ipynb
@@ -6,9 +6,8 @@
    "metadata": {},
    "source": [
     "# DGIdb disease categorization of citations analysis\n",
-    "Initial code produced by ChatGPT following conversational prompts.\n",
     "\n",
-    "Code was manually revised and reorganized into a python notebook and extended to cover other resources.\n",
+    "This analysis investigates the distribution of major disease categories across three biomedical data sources: DGIdb, Pharos, and OpenTargets. Using a keyword-based mapping derived from MeSH terms, each publication is categorized into one or more disease areas, such as cancer, psychiatric disorders, and infectious diseases. The analysis identifies category frequencies and visualizes the distributions as a grouped histogram, enabling a comparative assessment of disease focus across the three sources.\n",
     "\n",
     "## Data preparation\n",
     "For each resource (DGIdb, Pharos, OpenTargets):\n",
@@ -25,18 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "766bd205-cca2-4619-90e3-27957e790314",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "849eda20-cd5d-4868-9ac2-aee1cbc54791",
    "metadata": {},
    "outputs": [],
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "30a0080a-bdf0-45d1-9eb4-a0486137311d",
    "metadata": {},
    "outputs": [],
@@ -196,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "58472e37-269e-40dd-bf2e-9586451f25dd",
    "metadata": {},
    "outputs": [],
@@ -208,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "32e10f8d-4b51-4d2a-9b02-6c575714a846",
    "metadata": {},
    "outputs": [
