--- a/semantic-scholar-citations.ipynb
+++ b/semantic-scholar-citations.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "34505c03-c777-472e-a9c2-58a6dca44f15",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import time\n",
-    "from dataclasses import dataclass"
+    "import json"
    ]
   },
   {
@@ -39,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "cd480d0c-e4f9-4af5-ac0c-78490d23571f",
    "metadata": {},
    "outputs": [],
    "source": [
     "dgidb_ids = [\n",
-    "    \"4d5928aefcb2c4f7fcf420815bdb8c3628991e4f\",  # 1.0\n",
-    "    \"f23500ac9594a102f90da506368935bc8a769399\",  # 2.0\n",
-    "    \"47c27885c80ded97209f39e257ff6c4ab1eb34d6\",  # 3.0\n",
-    "    \"749ad05a40f668e597faa60a815aded780224e4d\",  # 4.0\n",
     "    \"f0e7a9a5b383994363aa4b68ed3509b082658e96\",  # 5.0\n",
+    "    \"749ad05a40f668e597faa60a815aded780224e4d\",  # 4.0\n",
+    "    \"47c27885c80ded97209f39e257ff6c4ab1eb34d6\",  # 3.0\n",
+    "    \"f23500ac9594a102f90da506368935bc8a769399\",  # 2.0\n",
+    "    \"4d5928aefcb2c4f7fcf420815bdb8c3628991e4f\",  # 1.0\n",
     "]\n",
     "\n",
     "pharos_ids = [\n",
@@ -108,8 +108,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "4010f54d-dbc1-4397-828a-d4d98b2d3d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_all_citation_data(paper_id):\n",
+    "    step = 500\n",
+    "    all_citations = []\n",
+    "    offset = 0\n",
+    "    while True:\n",
+    "        time.sleep(0.2)  # or use API key to avoid throttling\n",
+    "        url = f\"https://api.semanticscholar.org/graph/v1/paper/{paper_id}/citations?fields=intents,isInfluential,year&offset={offset}&limit={step}\"\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()\n",
+    "        data = response.json()\n",
+    "        if not data.get('data'):\n",
+    "            break\n",
+    "        for cite in data['data']:\n",
+    "            all_citations.append({\n",
+    "                \"intents\": cite['intents'],\n",
+    "                \"is_influential\": cite['isInfluential'],\n",
+    "                \"year\": cite['citingPaper']['year']\n",
+    "            })\n",
+    "        offset += step\n",
+    "    return all_citations\n",
+    "\n",
+    "all_citation_metadata = {\n",
+    "    \"dgidb\": {\n",
+    "        \"dgidb_5\": get_all_citation_data(dgidb_ids[0]),\n",
+    "        \"dgidb_4\": get_all_citation_data(dgidb_ids[1]),\n",
+    "        \"dgidb_3\": get_all_citation_data(dgidb_ids[2]),\n",
+    "        \"dgidb_2\": get_all_citation_data(dgidb_ids[3]),\n",
+    "        \"dgidb_1\": get_all_citation_data(dgidb_ids[4]),\n",
+    "    }, \n",
+    "    \"pharos\": {\n",
+    "        \"pharos_2023\": get_all_citation_data(pharos_ids[0]),\n",
+    "        \"pharos_2021\": get_all_citation_data(pharos_ids[1]),\n",
+    "        \"pharos_prots\": get_all_citation_data(pharos_ids[2]),\n",
+    "        \"pharos_orig\": get_all_citation_data(pharos_ids[3]),\n",
+    "    },\n",
+    "    \"ot\": {\n",
+    "        \"ot_2023\": get_all_citation_data(ot_ids[0]),\n",
+    "        \"ot_2020\": get_all_citation_data(ot_ids[1]),\n",
+    "        \"ot_2018\": get_all_citation_data(ot_ids[2]),\n",
+    "        \"ot_2016\": get_all_citation_data(ot_ids[3]),\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "with open(\"data/semantic_scholar_citation_metadata.json\", \"w\") as f:\n",
+    "    json.dump(all_citation_metadata, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19003fc1-4637-42a2-95b5-fa27e85d865d",
    "metadata": {},
    "outputs": [],
    "source": []
