--- a/semantic-scholar-citations.ipynb
+++ b/semantic-scholar-citations.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "4010f54d-dbc1-4397-828a-d4d98b2d3d5b",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
     "    all_citations = []\n",
     "    offset = 0\n",
     "    while True:\n",
-    "        time.sleep(0.2)  # or use API key to avoid throttling\n",
+    "        time.sleep(0.25)  # or use API key to avoid throttling\n",
     "        url = f\"https://api.semanticscholar.org/graph/v1/paper/{paper_id}/citations?fields=intents,isInfluential,year&offset={offset}&limit={step}\"\n",
     "        response = requests.get(url)\n",
     "        response.raise_for_status()\n",
@@ -127,7 +127,8 @@
     "            break\n",
     "        for cite in data['data']:\n",
     "            all_citations.append({\n",
-    "                \"intents\": cite['intents'],\n",
+    "                \"is_methodology\": \"methodology\" in cite.get('intents'),\n",
+    "                \"is_background\": \"background\" in cite.get('intents'),\n",
     "                \"is_influential\": cite['isInfluential'],\n",
     "                \"year\": cite['citingPaper']['year']\n",
     "            })\n",
