Fix figure legends getting cut off

--- a/disease-categorization.ipynb
+++ b/disease-categorization.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "766bd205-cca2-4619-90e3-27957e790314",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "849eda20-cd5d-4868-9ac2-aee1cbc54791",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "30a0080a-bdf0-45d1-9eb4-a0486137311d",
    "metadata": {},
    "outputs": [],
@@ -198,13 +198,13 @@
     "\n",
     "    # Show the plot\n",
     "    plt.tight_layout\n",
-    "    plt.savefig(f\"Disease categories by publication - {mode}.png\")\n",
+    "    plt.savefig(f\"Disease categories by publication - {mode}.png\", bbox_inches='tight')\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "58472e37-269e-40dd-bf2e-9586451f25dd",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "92c0519c",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "9          kidney diseases         79    4.682869"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "32e10f8d-4b51-4d2a-9b02-6c575714a846",
    "metadata": {},
    "outputs": [
